--- a/nodejs/MERN Stack/package.json
+++ b/nodejs/MERN Stack/package.json
@@ -14,7 +14,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.6.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
