--- a/nodejs/MERN Stack/package.json
+++ b/nodejs/MERN Stack/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.6.1",
+    "mongoose-sequence": "^5.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
